[package]
name = "shared"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.69"
deno_ast = "0.24.0"
deno_lint = "0.38.0"
globwalk = "0.8.1"
ignore = "0.4.20"
miette = { version = "5.5.0", features = ["fancy-no-backtrace"] }
pathdiff = "0.2.1"
serde = "1.0.152"
serde_json = "1.0.93"
