[package]
name = "shared"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.71"
deno_ast = "0.26.0"
deno_lint = "0.45.0"
globwalk = "0.8.1"
ignore = "0.4.20"
miette = { version = "5.9.0", features = ["fancy-no-backtrace"] }
pathdiff = "0.2.1"
serde = "1.0.163"
serde_json = "1.0.96"
